# AoCopt

./: .gitignore  AoC1.cpp  README.md  config.toml  harn
harness/: Cargo.toml
harness/src/: config.rs  deserialize.rs  main.rs
harness/src/config/: deserialize.rs
solutions/2023/C++/: AoC1.cpp
solutions/2023/C/d1p1_basic/: d1p1_debug
solutions/2023/Python/: Aoc-one.py
solutions/2023/Rust/: Cargo.toml
solutions/2023/Rust/d1p1_naive/: Cargo.toml
solutions/2023/Rust/d1p1_onepass/: Cargo.toml
solutions/2023/Rust/d4p1/: Cargo.toml
solutions/2023/Scala/Iter/: build.sbt
solutions/C/2023/d1p1_basic/: Makefile  d1p1  main.c
solutions/Dotnet/2023/DayOne/: .gitignore  DayOne.csproj  Program.cs  shell.nix
solutions/Elixir/2023/aoc/: .gitignore  aoc  mix.exs
solutions/Go/2023/d1_basic/: d1  go.mod  main.go
solutions/Go/2023/d1p1_onepass/: d1p1  go.mod  main.go
solutions/Haskell/2023/naive/: README.md  aoc.cabal  package.yaml
solutions/Lua/2023/d1p1/: AoCLua.lua  Regex.lua
solutions/Lua/2023/d1p1_onepass/: d1p1.lua
solutions/Lua/timing_lib/: Makefile  lua_timing.c
solutions/Python/2023/: d1p1.py  d1p2.py
solutions/Rust/: Cargo.toml  create_solution.sh
solutions/Rust/2015/d14p1/: Cargo.toml
solutions/Rust/2015/d1p1/: Cargo.toml
solutions/Rust/2015/d1p2/: Cargo.toml
solutions/Rust/2015/d2p1/: Cargo.toml
solutions/Rust/2015/d2p2/: Cargo.toml
solutions/Rust/2015/d3p1/: Cargo.toml
solutions/Rust/2015/d7p1/: Cargo.toml
solutions/Rust/2015/d7p2/: Cargo.toml
solutions/Rust/2023/d2p1/: Cargo.toml
solutions/Rust/aoc_util/: Cargo.toml
(+89 files in other folders)
